fix: timeline render on mobile

--- a/assets/css/pdf.css
+++ b/assets/css/pdf.css
@@ -20,5 +20,5 @@
 }
 
 .download-button a:hover {
-    background-color: #06038D;
+    background-color: #FF671F;
 }
