--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -284,3 +284,62 @@ body {
   }
   
   }
+
+
+
+
+/* Mobile Styles (660px and below) */
+@media screen and (max-width: 660px) {
+  .timeline:before {
+      left: 20px;
+  }
+
+  .direction-l,
+  .direction-r {
+      float: none;
+      width: 100%;
+      text-align: left;
+      padding-left: 45px;
+      position: relative;
+  }
+
+  .flag-wrapper {
+      text-align: left;
+  }
+
+  .time-wrapper {
+      display: block;
+      position: relative;
+      margin: 4px 0 0 0;
+      z-index: 14;
+  }
+
+  .desc {
+      position: relative;
+      margin: 1em 0 0 0;
+      padding: 0;
+      font-size: 0.9em;
+      line-height: 1.5em;
+      z-index: 15;
+  }
+}
+
+/* Small Mobile Styles (400px and below) */
+@media screen and (max-width: 400px) {
+  .direction-l,
+  .direction-r {
+      padding-left: 30px;
+  }
+
+  .flag {
+      font-size: 0.8em;
+  }
+
+  .time-wrapper {
+      font-size: 0.8em;
+  }
+
+  .desc {
+      font-size: 0.8em;
+  }
+}
